# mcp_test

./: .gitignore  1_mcp_server_functions.ipynb  2_mcp_server.py  4_mcp_client.py  README.md  mcp.json  mcp_server.py
youtube-ai-platform/backend/src/: main.rs
youtube-ai-platform/backend/static/: app.js  index.html
youtube-ai-platform/python/: cooking_transcript.txt  food_data_collector.py  image_embedding_test.py  mcp_client.py  mcp_server.py  requirements.txt  test_semantic_chunking.py
youtube-search-api/: .gitignore  Cargo.toml  README.md  env.example  my_mcp_client.py
youtube-search-api/src/: main.rs
youtube-search-api/static/: app.js  index.html
